Switched to https

--- a/DevColab.ipynb
+++ b/DevColab.ipynb
@@ -6,7 +6,7 @@
       "name": "DevColab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPubPGc/f/3512evcBQ97Q",
+      "authorship_tag": "ABX9TyMmtcgMnJYLLkIF7rjVQhMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,8 +83,8 @@
       "source": [
         "!curl -fsSL https://code-server.dev/install.sh | sh\n",
         "vscode_tunnel = ngrok.connect(8123)\n",
-        "print(\"Open the first link below in borwser:\")\n",
-        "print(vscode_tunnel)\n",
+        "print(\"Open the first link below in browser:\")\n",
+        "print(str(vscode_tunnel).replace('http://', 'https://'))\n",
         "!sudo rm ~/.config/code-server/config.yaml\n",
         "! sudo touch ~/.config/code-server/config.yaml\n",
         "! echo \"bind-addr: 127.0.0.1:8123\" >> ~/.config/code-server/config.yaml\n",
