--- a/DevColab.ipynb
+++ b/DevColab.ipynb
@@ -6,7 +6,7 @@
       "name": "DevColab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmtcgMnJYLLkIF7rjVQhMc",
+      "authorship_tag": "ABX9TyPXVwcB9NDEptoHG4OUwUA2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WTh4TbVxU09b"
+      },
+      "source": [
+        "#### For VScode, run this:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5YUSKsV3OhPr"
@@ -103,15 +112,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "XonuvkccPFYg"
+        "id": "x4nGqcWUVDn5"
       },
       "source": [
-        "!cat ~/.config/code-server/config.yaml"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "#### For direct ssh access, run this\n",
+        " Currently slightly broken, fixing soon"
+      ]
     },
     {
       "cell_type": "code",
@@ -134,6 +142,26 @@
         "print('Use the following command to connect: ' + \"ssh root@\" + \"tcp://\" + (address.split(':'))[0] + \" -p \" + (address.split(':'))[1])\n",
         "print(\"or if that doesn't work, use this: \" + \"ssh root@\" + (address.split(':'))[0] + \" -p \" + (address.split(':'))[1])\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rBqSiiVGVZf-"
+      },
+      "source": [
+        "#### Debug:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GbIzV45sVc5m"
+      },
+      "source": [
+        "!cat ~/.config/code-server/config.yaml"
       ],
       "execution_count": null,
       "outputs": []
