--- a/DevColab.ipynb
+++ b/DevColab.ipynb
@@ -6,7 +6,7 @@
       "name": "DevColab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXVwcB9NDEptoHG4OUwUA2",
+      "authorship_tag": "ABX9TyPTC/fDbfkoatT1DJD5o9UA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,8 +57,8 @@
         "# Update the package lists\n",
         "!sudo apt update\n",
         "\n",
-        "# Want to update all the packages too? Uncomment the below command. Warning: Updating usually takes some time (~1 minute)\n",
-        "#!sudo apt upgrade\n",
+        "# Don't want to update all the packages? Comment the below command. Warning: Updating usually takes some time (~1 minute)\n",
+        "!sudo apt upgrade\n",
         "\n",
         "# Mount Google Drive\n",
         "from google.colab import drive\n",
