Changed config location to be in drive

--- a/DevColab.ipynb
+++ b/DevColab.ipynb
@@ -6,7 +6,7 @@
       "name": "DevColab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTC/fDbfkoatT1DJD5o9UA",
+      "authorship_tag": "ABX9TyNSViVNKz8bpSZssQ0fE1EQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,8 @@
         "vscode_tunnel = ngrok.connect(8123)\n",
         "print(\"Open the first link below in browser:\")\n",
         "print(str(vscode_tunnel).replace('http://', 'https://'))\n",
-        "!sudo rm ~/.config/code-server/config.yaml\n",
+        "! sudo rm ~/.config/code-server/config.yaml\n",
+        "! sudo mkdir \"/root/.config/code-server/config.yaml\"\n",
         "! sudo touch ~/.config/code-server/config.yaml\n",
         "! echo \"bind-addr: 127.0.0.1:8123\" >> ~/.config/code-server/config.yaml\n",
         "! echo \"auth: password\" >> ~/.config/code-server/config.yaml\n",
@@ -106,7 +107,7 @@
         "! echo \"auth: password\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
         "! echo \"password: devcolab\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
         "! echo \"cert: false\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
-        "!code-server --user-data-dir \"/content/drive/My Drive/code-server\"\n"
+        "! cd \"/content/drive/My Drive/\" && code-server --config \"/content/drive/My Drive/code-server/config.yaml\" --user-data-dir \"/content/drive/My Drive/code-server\"\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -162,6 +163,17 @@
       },
       "source": [
         "!cat ~/.config/code-server/config.yaml"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rCo3WfdOaM-K"
+      },
+      "source": [
+        "!pwd"
       ],
       "execution_count": null,
       "outputs": []
