Some small changes

--- a/DevColab.ipynb
+++ b/DevColab.ipynb
@@ -6,7 +6,7 @@
       "name": "DevColab.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNSViVNKz8bpSZssQ0fE1EQ",
+      "authorship_tag": "ABX9TyNUeCvsloyrbYDXFNYtduod",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "import getpass\n",
         "authtoken = getpass.getpass()  # input your Ngrok auth token everytime you run the cell or simply replace \"getpass.getpass()\" with your token in \"double quotes\"\n",
         "!ngrok authtoken $authtoken # login to ngrok\n",
-        "\n"
+        "print(\"Google drive mounted and ngrok primed up. Now run any of the cells below.\")\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -94,20 +94,14 @@
         "vscode_tunnel = ngrok.connect(8123)\n",
         "print(\"Open the first link below in browser:\")\n",
         "print(str(vscode_tunnel).replace('http://', 'https://'))\n",
-        "! sudo rm ~/.config/code-server/config.yaml\n",
-        "! sudo mkdir \"/root/.config/code-server/config.yaml\"\n",
-        "! sudo touch ~/.config/code-server/config.yaml\n",
-        "! echo \"bind-addr: 127.0.0.1:8123\" >> ~/.config/code-server/config.yaml\n",
-        "! echo \"auth: password\" >> ~/.config/code-server/config.yaml\n",
-        "! echo \"password: devcolab\" >> ~/.config/code-server/config.yaml\n",
-        "! echo \"cert: false\" >> ~/.config/code-server/config.yaml\n",
         "\n",
         "!mkdir \"/content/drive/My Drive/code-server\"\n",
+        "! sudo rm \"/content/drive/My Drive/code-server/config.yaml\"\n",
         "! echo \"bind-addr: 127.0.0.1:8123\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
         "! echo \"auth: password\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
-        "! echo \"password: devcolab\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
+        "! echo \"password: devcolab\" >> \"/content/drive/My Drive/code-server/config.yaml\" #the default password is devcolab\n",
         "! echo \"cert: false\" >> \"/content/drive/My Drive/code-server/config.yaml\"\n",
-        "! cd \"/content/drive/My Drive/\" && code-server --config \"/content/drive/My Drive/code-server/config.yaml\" --user-data-dir \"/content/drive/My Drive/code-server\"\n"
+        "! code-server --config \"/content/drive/My Drive/code-server/config.yaml\" --user-data-dir \"/content/drive/My Drive/code-server\"\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -170,7 +164,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rCo3WfdOaM-K"
+        "id": "EiKz0ZtAePL8"
       },
       "source": [
         "!pwd"
